[input:date] [input:date-range] Fix calendar z-index and date alignment

--- a/src/components/discovery-dashboard/discovery-dashboard.scss
+++ b/src/components/discovery-dashboard/discovery-dashboard.scss
@@ -45,7 +45,7 @@
         border: var(--warp-view-tile-border, .1rem solid rgba(0, 0, 0, .075)) !important;
         box-shadow: var(--warp-view-tile-shadow, 0 0.125rem 0.25rem rgb(0 0 0 / 8%)) !important;
         border-radius: var(--warp-view-tile-border-radius, 0);
-        overflow: hidden;
+        overflow: visible;
         background: var(--warp-view-tile-background, $w10-transparent);
 
         &.dashboard, &.dashboard-flex, &.dashboard-scada {
